fixed spacing

--- a/public/css/innovationChallenge.css
+++ b/public/css/innovationChallenge.css
@@ -145,4 +145,9 @@ box-shadow:         1px 1px 3px 2px #6601c6;
 .nav-link{
   font-size: 0.8em !important;
 }
+
+div.item{
+  margin:0 5px;
+}
+
 } 
